add to cart functionality

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,8 @@
     <link rel="stylesheet" href="/assets/css/defined.css" />
     <link rel="stylesheet" href="/assets/css/base.css" />
     <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/home-default.css" />
+    <link rel="stylesheet" href="/assets/css/shopping-cart.css" />
     <link rel="stylesheet" href="/assets/css/home-cosmetics.css" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
