--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
     <link rel="stylesheet" href="/assets/css/home-default.css" />
     <link rel="stylesheet" href="/assets/css/shopping-cart.css" />
     <link rel="stylesheet" href="/assets/css/home-cosmetics.css" />
+    <link rel="stylesheet" href="assets/css/blog.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -62,6 +63,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="/assets/js/jquery-3.5.1.min.js"></script>
+    <script src="assets/js/nouislider.min.js"></script>
     <script src="/assets/js/jarallax.min.js"></script>
     <script src="/assets/js/packery.pkgd.min.js"></script>
     <script src="/assets/js/jquery.hoverIntent.min.js"></script>
@@ -70,6 +72,14 @@
     <script src="/assets/js/lazysizes.min.js"></script>
     <script src="/assets/js/js-cookie.min.js"></script>
     <script src="/assets/js/jquery.countdown.min.js"></script>
+    <script src="assets/js/photoswipe.min.js"></script>
+    <script src="assets/js/photoswipe-ui-default.min.js"></script>
+    <script src="assets/js/drift.min.js"></script>
+    <script src="assets/js/isotope.pkgd.min.js"></script>
+    <script src="assets/js/resize-sensor.min.js"></script>
+    <script src="assets/js/theia-sticky-sidebar.min.js"></script>
+
+
     <script src="/assets/js/interface.js"></script>
   </body>
 </html>
