--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,10 @@
       href="https://fonts.googleapis.com/css?family=Playfair+Display:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i&amp;display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="assets/css/drift-basic.min.css">
     <link rel="stylesheet" href="/assets/css/font-icon.min.css" />
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/photoswipe.css">
     <link rel="stylesheet" href="/assets/css/reset.css" />
     <link rel="stylesheet" href="/assets/css/defined.css" />
     <link rel="stylesheet" href="/assets/css/base.css" />
