--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
       href="https://fonts.googleapis.com/css?family=Playfair+Display:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i&amp;display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="assets/css/drift-basic.min.css">
+    <link rel="stylesheet" href="assets/css/photoswipe.css">
     <link rel="stylesheet" href="/assets/css/font-icon.min.css" />
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/assets/css/reset.css" />
@@ -38,6 +40,9 @@
     <link rel="stylesheet" href="/assets/css/shopping-cart.css" />
     <link rel="stylesheet" href="/assets/css/home-cosmetics.css" />
     <link rel="stylesheet" href="assets/css/blog.css">
+
+    <link rel="stylesheet" href="assets/css/single-masonry-theme.css">
+    <link rel="stylesheet" href="assets/css/single-product.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
