--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       type="image/png"
       href="assets/images/k_favicon_32x.png"
     />
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link
   rel="stylesheet"
   type="text/css"
@@ -99,7 +100,7 @@
     <script src="assets/js/theia-sticky-sidebar.min.js"></script>
 
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
-   
+
     <script src="/assets/js/interface.js"></script>
   </body>
 </html>
