--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
 />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
+    <!-- <meta
       name="description"
       content="Web site created using create-react-app"
-    />
+    /> -->
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -98,7 +98,7 @@
     <script src="assets/js/isotope.pkgd.min.js"></script>
     <script src="assets/js/resize-sensor.min.js"></script>
     <script src="assets/js/theia-sticky-sidebar.min.js"></script>
-    
+
 
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 
