--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="assets/images/k_favicon_32x.png">
-    <title>Potions of Paradise</title>
+    <title>Shop India</title>
     <link rel="preconnect" href="https://fonts.gstatic.com/">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i&amp;display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/home-cosmetics.css">
 </head>
-<body class="lazy_icons btnt4_style_2 zoom_tp_2 css_scrollbar template-index cart_pos_side kalles_toolbar_true hover_img2 swatch_style_rounded swatch_list_size_small label_style_rounded wrapper_full_width header_sticky_true hide_scrolld_true des_header_3 top_bar_true prs_bordered_grid_1 search_pos_full lazyload">
+<!-- <body class="lazy_icons btnt4_style_2 zoom_tp_2 css_scrollbar template-index cart_pos_side kalles_toolbar_true hover_img2 swatch_style_rounded swatch_list_size_small label_style_rounded wrapper_full_width header_sticky_true hide_scrolld_true des_header_3 top_bar_true prs_bordered_grid_1 search_pos_full lazyload">
 
 <div id="nt_wrapper">
     <!-- header -->
@@ -197,7 +197,7 @@
                                     </li>
                                     <li class="type_mega menu_wid_cus menu-item has-children menu_has_offsets menu_center pos_center">
                                         <a class="lh__1 flex al_center pr" href="#">Fragance</a>
-                                    </li>									
+                                    </li>
                                     <li class="type_mega menu_wid_cus menu-item has-children menu_has_offsets menu_center pos_center">
                                         <a class="lh__1 flex al_center pr kalles-lbl__nav-sale" href="#">Offers<span class="lbc_nav">Sale</span></a>
                                         <div class="cus sub-menu">
@@ -1026,7 +1026,7 @@
                                         <li class="menu-item"><a href="#">Hair</a></li>
                                         <li class="menu-item"><a href="#">Health & Wellness</a></li>
                                         <li class="menu-item"><a href="#">Men</a></li>
-                                        <li class="menu-item"><a href="#">Fragrance</a></li>										
+                                        <li class="menu-item"><a href="#">Fragrance</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -1093,7 +1093,7 @@
                                         </div>
 
                                     </form>
-                                    
+
                                 </div>
                             </div>
                         </div>
@@ -1668,10 +1668,10 @@
                     </ul>
                 </li>
                 <li class="menu-item"><a href="shop.html">Skin</a></li>
-                <li class="menu-item"><a href="shop.html">Hair</a></li>				
-                <li class="menu-item"><a href="shop.html">Health & Wellness</a></li>				
+                <li class="menu-item"><a href="shop.html">Hair</a></li>
+                <li class="menu-item"><a href="shop.html">Health & Wellness</a></li>
                 <li class="menu-item"><a href="shop.html">Men</a></li>
-                <li class="menu-item"><a href="shop.html">Fragrance</a></li>				
+                <li class="menu-item"><a href="shop.html">Fragrance</a></li>
                 <li class="menu-item menu-item-btns menu-item-wishlist">
                     <a class="js_link_wis" href="wishlist.html"><span class="iconbtns">Wishlist</span></a></li>
                 <li class="menu-item menu-item-btns menu-item-sea push_side" data-id="#nt_search_canvas">
@@ -1705,5 +1705,5 @@
 <script src="assets/js/js-cookie.min.js"></script>
 <script src="assets/js/jquery.countdown.min.js"></script>
 <script src="assets/js/interface.js"></script>
-</body>
-</html>
+</body> -->
+</html> -->
