--- a/src/index.html
+++ b/src/index.html
@@ -629,7 +629,7 @@
             <div class="kalles-cosmetics__category-banner container">
                 <div class="wrap_title des_title_7">
                     <h3 class="section-title tc pr flex fl_center al_center fs__24 title_7">
-                        <span class="mr__10 ml__10">Welcome to Potions of Paradise Natural Skincare</span></h3>
+                        <span class="mr__10 ml__10">Welcome to Shop India Natural Skincare</span></h3>
                     <span class="dn tt_divider"><span></span><i class="dn clprfalse la la-spa"></i><span></span></span><span class="section-subtitle db tc sub-title"></span>
                 </div>
                 <div class="mt__30 nt_cats_holder row equal_nt hoverz_true cat_size_4 cat_lay4_2 cat_lay5_1 cat_space_30 cat_design_1">
@@ -1106,7 +1106,7 @@
                 <div class="container pr tc">
                     <div class="row">
                         <div class="col-lg-6 col-md-12 col-12 col_1">Copyright © 2021
-                            <span class="cp">Potions of Paradise</span> All rights reserved.</div>
+                            <span class="cp">Shop India</span> All rights reserved.</div>
                         <div class="col-lg-6 col-md-12 col-12 col_2">
                             <ul id="footer-menu" class="clearfix">
                                 <li class="menu-item"><a href="#">Shop</a></li>
