--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link
       rel="shortcut icon"
       type="image/png"
-      href="assets/images/k_favicon_32x.png"
+      href="assets/images/s_logo.jpg"
     />
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link
